# docai

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/skills/tdd/: SKILL.md
.github/workflows/: ci.yml
docs/: CONFIG-REGISTRY.md
docs/decisions/: DECISIONS-SUMMARY.md
docs/decisions/adr/: ADR-001-domain-model-and-scope.md  ADR-002-pipeline-context-output-regeneration.md  ADR-003-parse-error-resilience.md  ADR-004-entity-taxonomy-and-documentation-standards.md  ADR-005-file-type-handling.md  ADR-006-system-architecture-components.md  ADR-007-file-discovery-component.md  ADR-008-structure-extractor-component.md  ADR-009-graph-builder-component.md  ADR-010-documentation-generator-component.md  ADR-011-project-state-component.md  ADR-012-cli-orchestrator-component.md  ADR-013-open-questions-resolution.md  ADR-014-revised-file-and-entity-taxonomy.md  ADR-015.md  ADR-016.md  ADR-017.md  ADR-018.md  ADR-019.md  ADR-020.md  ADR-021.md  ADR-022.md  ADR-023.md  ADR-024.md  ADR-025.md  option-c-structured.md
src/docai/: errors.py  main.py
src/docai/config/: datatypes.py  llm_config.yaml  loader.py  logging_config.yaml  logging_defaults.yaml  project_config.yaml
src/docai/discovery/: classifier.py  (+4 more)
tests/: conftest.py  test_placeholder.py
tests/cli/: test_main_parse_arguments.py
tests/config/: test_loader.py
tests/documentation/: test_base.py  test_datatypes.py  test_doc_cache.py  test_entity_documentation.py  test_entity_extraction.py  test_file_documentation.py  test_package_documentation.py  test_project_documentation.py
tests/evals/: __main__.py  apply_review.py  generate_review.py  migrate_ground_truth.py  pending_review.py  test_extractor_llm_fallback.py
tests/fixtures/: ground_truth.py
tests/llm/: test_agent_tools.py  test_cache.py  test_client.py  test_disk_cache.py  test_google_provider.py  test_llm_client.py  test_lru_cache.py  test_runner.py  test_service.py
tests/scanning/: test_file_infos.py  test_get_file_type.py  test_project_infos.py  test_search.py
tests/test_core/: test_errors.py
tests/test_discovery/: test_classifier.py  test_datatypes.py  test_ignore_rules.py  test_walker.py
tests/test_extractor/: test_datatypes.py  test_errors.py  test_extractor.py  test_llm_fallback.py  test_llm_fallback_chunking.py
tests/test_llm/: test_config.py  test_datatypes.py  test_service.py
tests/test_prompts/: test_loader.py
tests/test_state/: test_analyses.py  test_atomic_write.py  test_change_status.py  test_project_state.py  test_purge_removed.py  test_reconcile_status.py  test_status_io.py
tests/utils/: test_logging_utils.py
(+124 files in other folders)
