[project]
name = "docai"
version = "0.1.0"
description = "One to document them all"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "google-genai>=1.55.0",
    "importlib>=1.0.4",
    "logging>=0.4.9.6",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[project.scripts]
docai = "docai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docai"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: mark test as integration test",
]
