[project]
name = "docai"
version = "0.1.0"
description = "DocAI — one tool to document them all: language-universal, AI-powered documentation for any codebase."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "filetype>=1.2.0",
    "litellm>=1.83.1",
    "pathspec>=1.0.4",
    "pydantic>=2",
    "pyyaml>=6.0",
    "rich>=14.3.3",
    "tree-sitter>=0.25.2",
    "typer>=0.23.1",
]

[project.scripts]
docai = "docai.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/docai"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not eval'"

markers = [
    "unit: pure function tests, no I/O, no mocks",
    "integration: tests that touch the real filesystem",
    "slow: full pipeline tests or anything multi-stage",
    "llm: tests that use the mock LLM client",
    "tree_sitter: tests that exercise tree-sitter parsing (Tier 1 extractor)",
    "eval: real API calls to evaluate LLM prompt quality",
]

[tool.coverage.run]
source = ["src/docai"]

[tool.coverage.report]
show_missing = true
skip_empty = true
